2003-12-05 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 2.1.24, with explicit db 4.2 support.

2003-11-25 Sergey Lipnevich <sergey@sourcemage.org>
	* TRIGGERS: add a trigger for Berkeley DB.

2003-10-28 Sergey Lipnevich <sergey@sourcemage.org>
	* DETAILS: upgrade to 2.1.23.

2003-09-19  Sergey Lipnevich  <sergey@sourcemage.org>
	Made Berkeley DB required dependency.

2003-08-22  hgg <hgreig@bigpond.net.au>
	Update UPDATED purely for test grimoire integration.

2003-08-01  Sergey Lipnevich  <sergey@sourcemage.org>
	It pays to read the docs: the URL supplied to slapd at startup must have three slashes.

2003-07-30  Arwed v. Merkatz <v.merkatz@gmx.net>
	Updated to new init system.

2003-07-26  Sergey Lipnevich  <sergey@sourcemage.org>
	Removed one broken mirror planetmirror.com.
	Revert init script changes, here's why. Log message or no log
	message, the SLAPD_URL that was being used achieved its purpose:
	make OpenLDAP listen on all available IP interfaces on two ports,
	LDAP and LDAPS. Guessing the host name or listening on the
	local interface only doesn't achieve this or makes things
	too complicated.

2003-07-16  Eric Sandall <eric@sandall.us>
        Now listens on localhost by default

2003-07-14  Eric Sandall <eric@sandall.us>
        Modified the init.d scripts to work by default
        (Current setup gave "Address family not supported")

2003-07-11  Eric Sandall <eric@sandall.us>
        Added some mirrors from: http://www.openldap.org/software/download/
        Upgrade to 2.1.22

2003-05-30  Sergey Lipnevich  <sergey@sourcemage.org>
	Upgrade to 2.1.21.

2003-05-27  Sergey Lipnevich  <sergey@sourcemage.org>
	Fixed output of mkaccount.sh location in mkconf.sh (thanks to Eric Sandall).

2003-05-20  Sergey Lipnevich  <sergey@sourcemage.org>
	Upgrade to 2.1.20.

2003-05-08  Sergey Lipnevich  <sergey@sourcemage.org>
	Upgrade to 2.1.19.

2003-05-02  Rob Verkuylen <rob@verkuylen.net>
	Copied /init.d/slapd.sh to /init.d/slapd