@@ -1,4 +1,3 @@
-# $Id: BUILD,v 1.7 2003/01/04 05:41:22 sergeyli Exp $
 (
 
   ./configure            \
@@ -14,11 +13,9 @@
   make    depend  &&
   make            &&
   prepare_install &&
-  make    install
+  make    install &&
 
-) > $C_FIFO 2>&1 && (
-
-  cp -f /usr/libexec/slapd /usr/sbin/
+  cp -f /usr/libexec/slapd /usr/sbin/ &&
   . $SCRIPT_DIRECTORY/mkconf.sh
 
-)
+) >$C_FIFO 2>&1
