@@ -1,5 +1,8 @@
 2003-12-05 Sergey Lipnevich <sergey@sourcemage.org>
-	* DETAILS: upgrade to 2.1.24, with explicit db 4.2 support.
+	* DETAILS: upgrade to 2.1.24, with explicit db 4.2 support;
+	* BUILD: try and avoid creating files out of installwatch's scope;
+	* mkconf.sh: make it fail in case of errors;
+	* init.d/slapd: multiple URLs are accepted for slapd `-h' option.
 
 2003-11-25 Sergey Lipnevich <sergey@sourcemage.org>
 	* TRIGGERS: add a trigger for Berkeley DB.
